tests/ui/simd/intrinsic/generic-gather.stderr
error[E0511]: invalid monomorphization of `simd_gather` intrinsic: expected element type `i32` of second argument `x4<i32>` to be a pointer to the element type `f32` of the first argument `x4<f32>`, found `i32` != `*_ f32`
  --> $DIR/generic-gather.rs:31:9
   |
LL |         simd_gather(default, mask, mask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_gather` intrinsic: expected element type `u16` of third argument `x4<u16>` to be a signed integer type
  --> $DIR/generic-gather.rs:34:9
   |
LL |         simd_gather(default, pointers, umask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_gather` intrinsic: expected element type `f32` of third argument `x4<f32>` to be a signed integer type
  --> $DIR/generic-gather.rs:37:9
   |
LL |         simd_gather(default, pointers, fmask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_scatter` intrinsic: expected element type `i32` of second argument `x4<i32>` to be a pointer to the element type `f32` of the first argument `x4<f32>`, found `i32` != `*mut f32`
  --> $DIR/generic-gather.rs:43:9
   |
LL |         simd_scatter(values, mask, mask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_scatter` intrinsic: expected element type `u16` of third argument `x4<u16>` to be a signed integer type
  --> $DIR/generic-gather.rs:46:9
   |
LL |         simd_scatter(values, pointers, umask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_scatter` intrinsic: expected element type `f32` of third argument `x4<f32>` to be a signed integer type
  --> $DIR/generic-gather.rs:49:9
   |
LL |         simd_scatter(values, pointers, fmask);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0511`.
